# tmse

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  main.cpp
lib/: cmake_install.cmake
libtasks/: cmake_install.cmake
olagarro/cttasks/include/cttasks/: earlyexitparallel.h  mputils.h  parallel.h  repeat.h  select.h  serial.h  taskexecutor.h
olagarro/tasks/: CMakeLists.txt
olagarro/tasks/include/tasks/: repeat.h  select.h  task.h  taskexecutor.h  taskscore.h  wait.h
olagarro/tasks/src/: parallel.cpp  repeat.cpp  select.cpp  serial.cpp  task.cpp  taskexecutor.cpp  wait.cpp
src/: CMakeLists.txt  document.cpp  document.h  fileutilities.cpp  fileutilities.h  localization.cpp  localization.h  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  texteditor.cpp  texteditor.h  view.cpp  view.h
src/commands/: command.cpp  command.h  undoredostack.cpp  undoredostack.h
src/tasks/: listtasks.cpp  listtasks.h  mainmenutasks.cpp  mainmenutasks.h  mainwindowtasks.cpp  mainwindowtasks.h  menutasks.cpp  menutasks.h  tasksutils.cpp  tasksutils.h  waitevent.h  waitkey.cpp  waitkey.h
src/utils/: event.h  exception.cpp  exception.h  partitionedandsortedvector.h  size.h  stringutils.cpp  stringutils.h  terminalutils.cpp  terminalutils.h  vector2d.h
src/widgets/: filestabs.cpp  filestabs.h  fillerbox.cpp  fillerbox.h  layouts.h  list.cpp  list.h  mainmenu.cpp  mainmenu.h  mainmenuitem.cpp  mainmenuitem.h  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  menuentry.cpp  menuentry.h  menulist.cpp  menulist.h  selectionwindow.cpp  selectionwindow.h  textbox.cpp  textbox.h  welcomebackground.cpp  welcomebackground.h  widget.cpp  widget.h
tests/: CMakeLists.txt  document_tests.cpp  partitionedandsortedvector_tests.cpp  stringutils_tests.cpp  undoredostack_tests.cpp  view_tests.cpp
